--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "framer-motion": "^12.5.0",
+    "googleapis": "^148.0.0",
     "lucide-react": "^0.482.0",
     "next": "^15.2.2",
     "next-fonts": "^1.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "resend": "^4.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
