--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:css": "tailwindcss build src/app/globals.css -o dist/styles.css"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "framer-motion": "^12.5.0",
     "googleapis": "^148.0.0",
     "lucide-react": "^0.482.0",
@@ -17,6 +18,7 @@
     "next-fonts": "^1.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "resend": "^4.2.0"
   },
