Removed the Testing files

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 
 # testing
 /coverage
-
+/cypress/
 # next.js
 /.next/
 /out/
@@ -32,6 +32,22 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+Hero.cy.jsx
+Header.cy.jsx
+Footer.cy.jsx
+Expertise.cy.jsx
+Contact.cy.jsx
+Faq.cy.jsx
+ProductCard.cy.jsx
+Products.cy.jsx
+TeamSection.cy.jsx
+Vision.cy.jsx
+pagePrivacy.cy.jsx
+pageHAKPage.cy.jsx
+pageJuliePage.cy.jsx
+pagePulsarPage.cy.jsx
+pageYakoPage.cy.jsx
+Setup_configuration.docx
 
 # vercel
 .vercel
