--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
+    "react-lottie": "^1.2.10",
     "resend": "^4.2.0"
   },
   "devDependencies": {
